<!-- 앱에서 사용 할 문자열들 정의 -->
<resources>
    <!-- 메인 화면에서 사용 할 문자열 -->
    <string name="app_name">FishDic</string>
    <string name="dic">도감</string>
    <string name="denied_fish">이달의&#160;금어기</string>
    <string name="fish_identification">어류&#160;판별</string>
    <string name="parasite">기생충&#160;정보</string>
    <string name="help">이용가이드</string>

    <!-- 메인 화면의 상단 왼쪽의 메뉴 클릭 시 보여질 네비게이션 메뉴에서 사용 할 문자열 -->
    <string name="settings">설정</string>
    <string name="info">정보</string>
    <string name="exit">종료</string>
    <string name="app_version">앱&#160;버전&#160;:&#160;v%s</string>
    <string name="db_version">DB&#160;버전&#160;:&#160;v%s</string>
    <string name="model_version">판별&#160;모델&#160;버전&#160;:&#160;v%s</string>
    <string name="homepage">https://github.com/2021-KNU-Capstone-Team1/FishDic</string>
    <string name="copyright"><b>Copyright&#160;2021.&#160;"2021-KNU-Capstone-Team1"\nAll&#160;Rights&#160;Reserved.</b></string>
    <string name="app_info">앱&#160;정보</string>
    <string name="license">라이센스</string>
    <string name="nifs_info">어류&#160;정보&#160;및&#160;금어기&#160;정보는&#160;국립수산과학원에서&#160;제공하는&#160;자료를&#160;바탕으로&#160;제작하였습니다.</string>
    <string name="tflite_info">어류&#160;판별&#160;모델&#160;제작&#160;시에&#160;Tensorflow에서&#160;제공하는&#160;Keras를&#160;이용하였습니다.\n어류&#160;판별&#160;시에&#160;Tensorflow에서&#160;제공하는&#160;TFLite&#160;모듈을&#160;이용하였습니다.</string>

    <!-- 설정에서 사용 할 문자열 -->
    <string name="settings_fish_detail_font_size">어류&#160;상세&#160;정보&#160;폰트&#160;크기</string>
    <string name="settings_fish_identification_threshold">어류&#160;판별&#160;결과&#160;유사도&#160;임계값</string>
    <string name="settings_init_message">초기화</string>

    <!-- 도감 및 어류 상세 정보에서 사용 할 문자열 -->
    <string name="bio_class_info">생물분류&#160;:&#160;</string>
    <string name="enter_name">이름&#160;입력</string>
    <string name="fish_detail">어류&#160;상세&#160;정보</string>
    <string name="parasite_detail">기생충&#160;상세&#160;정보</string>

    <!-- 메세지 다이얼로그 공용 문자열 -->
    <string name="error_title">오류</string>
    <string name="ok_message">확인</string>
    <string name="permission_granted">권한이&#160;허가되었습니다.</string>
    <string name="permission_denied">권한이&#160;거부되었습니다.\n</string>

    <!-- 어류 상세 정보에서 사용 할 문자열 -->
    <string name="basic_info">기본&#160;정보</string>
    <string name="denied_info">금지&#160;행정정보</string>
    <string name="name">이름(국명)</string>
    <string name="scientific_name">학명</string>
    <string name="bio_class">생물분류</string>
    <string name="shape">형태</string>
    <string name="distribution">분포</string>
    <string name="body_length">몸길이</string>
    <string name="habitat">서식지</string>
    <string name="warnings">주의사항</string>
    <string name="denied_length">금지체장</string>
    <string name="denied_weight">금지체중</string>
    <string name="denied_water_depth">수심</string>
    <string name="special_prohibit_admin_area">특별&#160;금지구역</string>
    <string name="special_prohibit_admin_start_date">금지시작기간</string>
    <string name="special_prohibit_admin_end_date">금지종료기간</string>
    <string name="empty_info">등록&#160;된&#160;정보가&#160;없습니다.</string> <!-- NULL 허용 된 필드에 대해 입력 된 데이터가 없을 경우 -->
    <string name="empty_area">전&#160;지역을&#160;대상으로&#160;포획을&#160;금지한다.</string> <!-- NULL 허용 된 특별 금지구역 필드에 대해 입력 된 데이터가 없을 경우 -->
    <string name="empty_date">별도의&#160;행정명령&#160;시까지&#160;포획을&#160;금지한다.</string>  <!-- NULL 허용 된 금지기간에 대해 입력 된 데이터가 없을 경우 -->
    <string name="not_exist_fish_message">존재하지&#160;않은&#160;어류입니다.</string>

    <!-- 어류 판별에서 사용 할 문자열 -->
    <string name="fish_identification_percentage_info">유사도&#160;:&#160;</string>
    <string name="fish_identification_camera_storage_permission_message">판별&#160;기능&#160;수행&#160;및&#160;개선을&#160;위해&#160;카메라,&#160;저장소&#160;접근&#160;권한&#160;및&#160;휴대&#160;전화&#160;상태&#160;접근&#160;권한을&#160;허용해주세요.</string>
    <string name="fish_identification_process_message">사진&#160;조절</string>
    <string name="fish_identification_result_message">판별&#160;결과</string>
    <string name="fish_identification_info_message">총&#160;%d건의&#160;유사&#160;어류가&#160;판별되었습니다.</string>
    <string name="fish_identification_fail_message">등록되지&#160;않은&#160;어류이거나,&#160;인식&#160;할&#160;수&#160;없는&#160;이미지입니다.</string>
</resources>