<?xml version="1.0" encoding="utf-8"?>

<!-- 어류 상세정보의 금지 행정정보 표 Fragment 레이아웃 정의 -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:stretchColumns="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/denied_info"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:background="@drawable/background_cell"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/denied_length" />

        <TextView
            android:id="@+id/fishDetail_denied_length_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:background="@drawable/background_cell"
            android:gravity="left"
            android:padding="5dip" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:background="@drawable/background_cell"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/denied_weight" />

        <TextView
            android:id="@+id/fishDetail_denied_weight_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:background="@drawable/background_cell"
            android:gravity="left"
            android:padding="5dip" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:background="@drawable/background_cell"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/denied_water_depth" />

        <TextView
            android:id="@+id/fishDetail_denied_water_depth_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:background="@drawable/background_cell"
            android:gravity="left"
            android:padding="5dip" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:background="@drawable/background_cell"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/special_prohibit_admin_area" />

        <TextView
            android:id="@+id/fishDetail_special_prohibit_admin_area_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:background="@drawable/background_cell"
            android:gravity="left"
            android:padding="5dip" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:background="@drawable/background_cell"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/special_prohibit_admin_start_date" />

        <TextView
            android:id="@+id/fishDetail_special_prohibit_admin_start_date_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:background="@drawable/background_cell"
            android:gravity="left"
            android:padding="5dip" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:background="@drawable/background_cell"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/special_prohibit_admin_end_date" />

        <TextView
            android:id="@+id/fishDetail_special_prohibit_admin_end_date_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:background="@drawable/background_cell"
            android:gravity="left"
            android:padding="5dip" />

    </TableRow>

</TableLayout>