<?xml version="1.0" encoding="utf-8"?>

<!-- 메인 화면의 상단 왼쪽의 메뉴 클릭 시 보여질 네비게이션 메뉴 레이아웃 정의 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outerNavigation_linearLayout"
    android:layout_width="230dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <!-- 상단 로고 -->
    <LinearLayout
        android:id="@+id/innerNavigation_linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/white">

        <ImageView
            android:id="@+id/innerNavigation_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />
    </LinearLayout>

    <!-- 하단 상호작용 요소들 -->
    <!-- 이미지를 10dp 만큼 padding 하였으므로,
    글자도 가운데로 오기 위해 10dp 만큼 paddingLeft 주었음 -->
    <LinearLayout
        android:id="@+id/innerNavigation_linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/innerNavigation_settings_toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/settings_30x30"
                android:visibility="visible" />

            <TextView
                android:id="@+id/innerNavigation_settings_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/innerNavigation_info_toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/info_30x30"
                android:visibility="visible" />

            <TextView
                android:id="@+id/innerNavigation_info_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/info"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/innerNavigation_exit_toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/exit_30x30"
                android:visibility="visible" />

            <TextView
                android:id="@+id/innerNavigation_exit_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/exit"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <TextView
            android:id="@+id/innerNavigation_app_version_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/app_version"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/innerNavigation_db_version_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/db_version"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/innerNavigation_model_version_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/model_version"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>
</LinearLayout>